Refactoring dei package e delle classi. Aggiunte TimeUtils e ErrorUtils. Modifiche al controller per gli Stop e aggiunta delle entità di Risposta e di Errore.